--- a/Exercicios/ex022/fundo6.html
+++ b/Exercicios/ex022/fundo6.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+             shorhand - background
+                color > image > position > / > attaachment
+                */
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed; 
             background-size: cover;
         }
 
@@ -26,7 +33,7 @@
 <body>
     <main>
         <h1>teste de imagens de fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quam quibusdam delectus obcaecati doloremque praesentium labore aspernatur fuga quia dolorum modi, quae atque. Cupiditate quod aliquid harum quas, nemo at?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quam quibusdam delectus obcaecati doloremque praesentium labore aspernatur fuga quia dolorum modi, quae atque. Cupiditate quod aliquid harum quas, nemo at? Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui praesentium rem porro quaerat debitis vel soluta odio reiciendis mollitia quod hic dolorem similique perferendis, eligendi velit necessitatibus harum dignissimos esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque eligendi dignissimos aliquam soluta mollitia quae, at suscipit commodi recusandae alias accusamus a tempore perferendis fuga repellat deserunt corporis sapiente esse. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat illo eligendi consequatur quam esse! Molestiae et cumque laborum veritatis in ea quia fugiat! Culpa praesentium totam eveniet sit esse ipsa. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo consectetur aliquid illo enim molestiae ipsa ratione ipsam voluptatum aliquam consequatur, ut praesentium nostrum velit obcaecati architecto mollitia pariatur voluptatem quasi!Lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat cupiditate laborum culpa? Dolores, recusandae ad veniam laboriosam porro facilis voluptate unde, veritatis error perspiciatis magni nihil perferendis earum ab! Omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, blanditiis vero aliquid laborum earum veniam fugiat, dolor id, voluptatibus enim minima provident ipsa? Reprehenderit quo nihil quibusdam necessitatibus a quia? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti quas voluptate hic deserunt illo enim et consectetur ad repellendus itaque corporis recusandae perspiciatis ab, facere natus voluptatum, blanditiis quae optio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem facere, optio molestiae provident quas dolore! Amet minus enim soluta nesciunt? Nobis provident velit pariatur quae deleniti delectus numquam dolorum veniam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, expedita? Deserunt adipisci alias, quis vel corporis eaque, maiores, dicta voluptate repudiandae vero atque soluta odio praesentium ratione eius architecto dolor? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint rerum iure ducimus tenetur officiis nihil odit eaque modi reiciendis. Iusto voluptates alias repellat saepe ratione repudiandae quo non architecto excepturi.</p>
     </main>
 </body>
 </html>
