--- a/desafios/desafio 011/desafio11.html
+++ b/desafios/desafio 011/desafio11.html
@@ -18,12 +18,9 @@
 
         .conteiner {          
             display:flex; 
-            width: 100vh;
-            height: 50;
-           
+            margin: auto;
+            justify-content: center;
             align-items: center;
-            background-position: center center;           
-
         }
     </style>
 </head>
