--- a/Exercicios/ex002/index.html
+++ b/Exercicios/ex002/index.html
@@ -9,9 +9,24 @@
     <h1>Paragrafo e quebra de linhas</h1>
     <hr>
     <p>voce pode escrever um paragrafo de qualquer jeito.
-    basta colocar tudo no meio de &lt;p&gt; e &lt;/p&gt;
+    basta colocar tudo no meio de &lt;p&gt; e &lt;/p&gt; <!--LESS THAN / GREATER THAN -->
     </p>
-    <p>Se precisar quebar o texto em algum lugar especifico <br>com esse voce pode usar a tag &lt; br&gt; </p>
-    
+    <p>Se precisar quebar o texto em algum lugar especifico <br> com esse voce pode usar a tag &lt; br&gt; </p>
+
+    <P>vamos adicionar alguns simbolos especificos:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &delta;
+        &uarr;
+
+    </P>
+    <p>vamos adicionar alguns emoju:
+        &#x1F596;
+        &#x1F913;
+    </p>
 </body>
 </html>
