--- a/Exercicios/ex002/index.html
+++ b/Exercicios/ex002/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Paragrafo e quebra de linhas</h1>
     <hr>
-    <p>você pode escrever um parágrafo de qualquer jeito.
+    <p>você pode escrever um pargrafo de qualquer jeito.
     basta colocar tudo no meio de &lt;p&gt; e &lt;/p&gt; <!--LESS THAN / GREATER THAN -->
     </p>
     <p>Se precisar quebar o texto em algum lugar especifico <br> com esse voce pode usar a tag &lt; br&gt; </p>
