--- a/desafios/desafio 012/desafio012.html
+++ b/desafios/desafio 012/desafio012.html
@@ -30,7 +30,7 @@
 
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes<BR>
             É tudo abreviado<BR>
@@ -67,7 +67,7 @@
 
     </section>
         
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
