--- a/Exercicios/ex024/iframe002.html
+++ b/Exercicios/ex024/iframe002.html
@@ -11,7 +11,10 @@
     <h1> testando ifrmae</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit aut nostrum perferendis rerum explicabo magni fuga eveniet beatae eligendi ea porro dolorem consequatur deleniti, exercitationem consequuntur sequi, ullam commodi incidunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id at voluptates culpa corporis facere odit similique amet animi saepe quaerat ducimus temporibus mollitia, eligendi cupiditate, pariatur asperiores debitis, sapiente possimus!</p>
 
-    <iframe src="pag002.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag002.html" frameborder="0" height="500" width="500">
+        <p>infeliente o seu navegador nao é compativel</p>
+    </iframe>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores architecto eius illum consectetur illo? Culpa obcaecati, sequi mollitia quisquam magni dolores assumenda. Repellat earum quis amet ipsam eum vitae ut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa harum illo commodi nesciunt facere architecto ratione, dolor voluptate ipsum minus animi corrupti cumque atque enim in dolores odio, saepe quam!</p>
 </body>
 </html>
