--- a/Exercicios/ex024/iframe005.html
+++ b/Exercicios/ex024/iframe005.html
@@ -9,7 +9,7 @@
     <h1>Minha Pagina</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, recusandae. Facilis, praesentium tempora ad rerum quisquam tenetur accusantium dolores aperiam ea, atque ipsum officiis veritatis ratione animi, harum magni placeat.</p>
 
-    <iframe src="paginas-extras/pag005.html" ></iframe>
+    <iframe src="paginas-extras/pag005.html" referrerpolicy="no-referrer" sandbox="allow-scripts"></iframe>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores impedit quibusdam laudantium mollitia totam quisquam nostrum eligendi a dolores! Expedita quia nemo voluptatum eligendi illo suscipit mollitia veritatis quod vel!</p>
 </body>
